# commons

./: .gitignore  CMakeLists.txt  a_test.cpp  readme.md
commons/: refractor_core.h  refractor_math.h
commons/__impl/: r_core_impl_win64.h  r_math_impl_avx.h
commons/refractor/core/: core.h
commons/refractor/core/__detail/: core_gnulnx.h
commons/refractor/math/__detail/: vreg_math.h  vreg_type.h
commons/refractor/rendapi/: features.txt  types.h
doc/: styleguide.md
inc/refractor/core/: core.h
inc/refractor/core/__detail/: win64_core.h
inc/refractor/math/: math.h  vreg.h
inc/refractor/math/__detail/: vreg_def.h  vreg_math.h
inc/refractor/media/: empty_folder
inc/refractor/rhi/: features.txt
